--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,7 +1,10 @@
 <div class="row">
-    <div class="card">
-      <h4>Tentang Aplikasi</h4>
-      <span>Web ini sebagai tugas syarat untuk belajar Membangun Progressive Web App dari Dicoding Academy</span>
-      
-    </div> 
+  <div class="col s12 m12">
+    <div class="card white z-depth-5">
+      <div class="card-content black-text">
+        <h4>Tentang Aplikasi</h4>
+        <span>Web ini sebagai tugas syarat untuk belajar Membangun Progressive Web App dari Dicoding Academy</span>
+      </div>
+    </div>
   </div>
+</div>
