--- a/public/pages/saved.html
+++ b/public/pages/saved.html
@@ -1,12 +1,20 @@
 <div class="row">
-    <div class="col s12 m7" id="teams">
-      <div class="preloader">
-        <div class="loading">
-          <img src="./img/poi.gif" width="80">
-          <p>Harap Tunggu</p>
-        </div>
+  <div class="col s12 m12">
+    <div class="card white z-depth-5">
+      <div class="card-content black-text">
+        <h4>Saved Teams</h4>
       </div>
-    <!-- Card berisi artikel akan disisipkan ke dalam sini. -->
     </div>
-    
+  </div>
+</div>
+<div class="row">
+  <div class="col s12 m7" id="teams">
+    <div class="preloader">
+      <div class="loading">
+        <img src="./img/poi.gif" width="80">
+        <p>Harap Tunggu</p>
+      </div>
+    </div>
+  <!-- Card berisi artikel akan disisipkan ke dalam sini. -->
+  </div>
 </div>
